.hot fixes: make path changes

--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<!doctype html><link as=fetch crossorigin href=/my_profile-ab1c50633dd99eaa_bg.wasm integrity=sha384-Lz0OC5ZS4P6RouuJ80mKE2coiIMXmdlrawFQ4v9QFlpii0vUPqbkFxwqd2/FKYR2 rel=preload type=application/wasm><link crossorigin href=/my_profile-ab1c50633dd99eaa.js integrity=sha384-faqDl2eqJYlzQjXxloZ+KIy39MC6daiyS3N6+qJmdLoxBqQyw8WUC4aW5GgoeQ3J rel=modulepreload></head><body><script type=module>import a,*as b from"/my_profile-ab1c50633dd99eaa.js";a(`/my_profile-ab1c50633dd99eaa_bg.wasm`);window.wasmBindings=b</script></body></html>
+<!doctype html>
+<link as=fetch crossorigin href=my_profile/my_profile-ab1c50633dd99eaa_bg.wasm
+    integrity=sha384-Lz0OC5ZS4P6RouuJ80mKE2coiIMXmdlrawFQ4v9QFlpii0vUPqbkFxwqd2/FKYR2 rel=preload type=application/wasm>
+<link crossorigin href=my_profile/my_profile-ab1c50633dd99eaa.js
+    integrity=sha384-faqDl2eqJYlzQjXxloZ+KIy39MC6daiyS3N6+qJmdLoxBqQyw8WUC4aW5GgoeQ3J rel=modulepreload>
+</head>
+
+<body>
+    <script
+        type=module>import a,*as b from"my_profile/my_profile-ab1c50633dd99eaa.js";a(`my_profile/my_profile-ab1c50633dd99eaa_bg.wasm`);window.wasmBindings=b</script>
+</body>
+
+</html>
